fix content overflow on mobile #81

--- a/assets/sass/_base.sass
+++ b/assets/sass/_base.sass
@@ -36,6 +36,7 @@ body
   position: relative
   font-kerning: normal
   display: flex
+  min-width: 0
   flex-direction: column
   justify-content: space-between
   min-height: 100vh
