--- a/assets/sass/_syntax.sass
+++ b/assets/sass/_syntax.sass
@@ -87,6 +87,7 @@ code
       pre
         width: 100%
         display: flex
+        min-width: 0
         align-items: center
         flex-direction: column
 
@@ -201,6 +202,7 @@ code
     right: 0rem
     top: -2.1rem
     opacity: 0
+    min-width: 0
   &_icon
     display: inline-flex
     align-items: center
@@ -209,6 +211,7 @@ code
     padding: 0.1rem
     transform-origin: 50% 50%
     margin: 0
+    min-width: 0
     &.active
       animation: pulse 0.1s linear
     svg
@@ -244,3 +247,4 @@ code
 .line
   &-flex
     display: flex
+    min-width: 0
