--- a/assets/sass/_utils.sass
+++ b/assets/sass/_utils.sass
@@ -76,6 +76,7 @@
 .chart
   display: grid
   grid-gap: 1.5rem
+  min-width: 0
   max-width: 98vw !important
   max-height: 98vw !important
 
